welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^SnakeBuggle:21: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:21: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:27: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
          return true
                 ^SnakeBuggle:27: warning: enclosing method fonctionTest has result type Unit: return value discarded
          return true
          ^SnakeBuggle:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:31: warning: enclosing method fonctionTest has result type Unit: return value discarded
    return false
    ^